# tuner

./: .gitmodules  CMakeLists.txt  CNoteDefs.h  main.cpp  main.qml  qml.qrc
audio_processor/: QAudioProcessor.cpp  QAudioProcessor.h
controller/: CTunerController.cpp  CTunerController.h
data_holder/: CDataHolder.cpp  CDataHolder.h
factory/: CFactory.cpp  CFactory.h  CFactoryDefaults.cpp  CFactoryDefaults.h  CFactoryJSON.cpp  CFactoryJSON.h
notation/: CNotation.cpp  CNotation.h  CNotationI.h
note/: CNote.cpp  CNote.h  CNoteI.h
octave/: COctave.cpp  COctave.h  COctaveI.h
qml/: QC_NotationView.qml  QC_NoteView.qml  QC_OctaveView.qml  QC_OctaveViewSmall.qml  QC_SampleDataView.qml  main.qml
qt_bundle/: QDataHolder.cpp  QDataHolder.h  QNotation.cpp  QNotation.h  QNote.cpp  QNote.h  QOctave.cpp  QOctave.h  QSampleProcessor.cpp  QSampleProcessor.h
sample_processor/: CSampleProcessor.h  CSampleProcessorKFFT.cpp  CSampleProcessorKFFT.h
